deploy/ingress/mannazu-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mannazu-api-ingress
  namespace: mannazu
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    # 실제 서비스 배포용 
    - host: api.mannazu.com
      http:
        paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: swagger-service
              port:
                number: 80              
        - path: /admin(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: admin-service-stable
              port:
                number: 8080    
        - path: /auth(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: auth-service-stable
              port:
                number: 8080                    
        - path: /chat(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: chat-service-stable
              port:
                number: 8080  
        - path: /community(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: community-service-stable
              port:
                number: 8080                  
        - path: /post(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: post-service-stable
              port:
                number: 8080  
        - path: /review(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: review-service-stable
              port:
                number: 8080                  
        - path: /shop(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: shop-service-stable
              port:
                number: 8080       
        - path: /user(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: user-service-stable
              port:
                number: 8080            
    # test 배포용 (canary) 
    - host: canaryapi.mannazu.com
      http:
        paths:         
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: swagger-service-canary
              port:
                number: 80                   
        - path: /admin(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: admin-service-canary
              port:
                number: 8080    
        - path: /auth(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: auth-service-canary
              port:
                number: 8080                    
        - path: /chat(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: chat-service-canary
              port:
                number: 8080  
        - path: /community(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: community-service-canary
              port:
                number: 8080                  
        - path: /post(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: post-service-canary
              port:
                number: 8080  
        - path: /review(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: review-service-stable
              port:
                number: 8080                   
        - path: /shop(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: shop-service-canary
              port:
                number: 8080       
        - path: /user(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: user-service-canary
              port:
                number: 8080
